@@ -6,6 +6,8 @@ kickseed (0.53) UNRELEASED; urgency=low
   * Drop no-standards-version-field override, which Lintian no longer emits
     for udebs.
   * Upgrade to debhelper v7.
+  * Implement 'repo', with some Debian extensions to handle the sources.list
+    format.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 14 Jul 2009 01:19:48 +0100
 
